Fix alignment issues on some images/placeholders and add hover action to buttons

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     min-height: 100vh;
     display: flex;
@@ -40,10 +40,14 @@ ul {
 .container-a {
     padding-top: 100px;
     padding-bottom: 100px;
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .container-a-left {
     margin-right: 50px;
+    max-width: 50%;
 }
 .title-a {
     font-size: 48px;
@@ -68,11 +72,20 @@ button {
     font-weight: normal;
     border: none;
     font-size: 18px;
+    cursor: pointer;
 }
 
-.container-a-right { /*Follow up on this item, it doesn't align center*/
+button:hover {
+    background-color: #f9faf8;
+    color: #3882f6;
+
+}
+
+
+
+.container-a-right { 
     display: flex;
-    width: 500px;
+    width: 400px;
     height: 200px;
     background-color: rgb(119, 119, 119);
     align-items: center;
@@ -154,18 +167,18 @@ button {
     padding:50px 25%  ;
     background-color: #e5e7eb;
     flex-direction: column;
-    gap: 20px;
+    
 
 }
 
 .quote {
-    font-size: 36px;
+    font-size: 28px;
     font-style: italic;
     color: #59677a;
 }
 
 .author {
-    font-size: 22px;
+    font-size: 20px;
     font-weight: bold;
     margin-left:auto;
 }
@@ -178,6 +191,7 @@ button {
     border-radius: 8px;
     color: #e5e7eb;
     justify-content: space-between;
+    align-items: center;
 }
 
 .title-d {
@@ -186,6 +200,7 @@ button {
 }
 .content-d {
     padding-right: 50px;
+
 }
 
 .right-d-button {
@@ -197,6 +212,8 @@ button {
     margin: 0;
     width: 125px;
     height: 35px;
+    display: flex;
+    justify-content: center;
 }
 
 .footer {
